# buy-it

./: .dockerignore  .env.example  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
app/: config.py  deps.py  main.py
app/infrastructure/db/: engine.py  health.py
app/infrastructure/logging/: logger.py
app/infrastructure/storage/: errors.py  file_storage.py  local_file_storage.py
app/models/: __init__.py  product.py  product_category.py
app/routers/: health.py  health_router.py  product_categories_router.py  product_category_router.py  products_router.py
app/schemas/: product_category_schema.py  product_schema.py
app/services/: errors.py  product_category_service.py  product_service.py  utils.py
migrations/: env.py
migrations/versions/: 1782407153_add_product_categories.py  1782424674_add_products.py  1782424674_name_add_products.py  1782429137_product_search_indexes.py
src/app/: config.py  main.py
src/app/api/: deps.py
tests/: conftest.py
tests/integration/: conftest.py  test_db_health.py  test_health.py
tests/integration/routers/product_categories_router/: test_create_product_category.py  test_delete_product_category.py  test_get_product_category.py  test_list_product_categories.py  test_update_product_category.py
tests/integration/routers/product_category_router/: test_create_product_category.py  test_delete_product_category.py  test_get_product_category.py  test_update_product_category.py
tests/integration/routers/product_router/: test_create_product.py  test_delete_product.py  test_get_product.py  test_list_products.py  test_update_product.py
tests/integration/routers/products_router/: test_create_product.py  test_get_product.py  test_list_products.py  test_update_product.py  test_upload_image.py
tests/unit/: test_config.py  test_db_health.py
tests/unit/services/: test_utils.py
tests/unit/services/product_category_service/: test_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
tests/unit/services/product_service/: conftest.py  test_create.py  test_delete.py  test_get.py  test_list.py  (+2 more)
tests/unit/storage/: test_local_file_storage.py
